--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.show-sql=true
 
 user.profile.image.path=images/users/
 category.cover.image.path=images/category/
+product.image.path=images/product/
 
 
 spring.servlet.multipart.max-file-size=10MB
